--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,9 +2,11 @@ cmake_minimum_required(VERSION 3.1)
 
 function(lanxc_unit_test )
     foreach (t ${ARGN})
-        add_executable("${t}" "${t}.cpp")
+        add_executable("${t}" EXCLUDE_FROM_ALL "${t}.cpp")
         target_link_libraries(${t} lanxc-core)
+        add_test(compile-${t} "${CMAKE_COMMAND}" --build ${CMAKE_BINARY_DIR} --target ${t})
         add_test(test-${t} ${t})
+        set_tests_properties(test-${t} PROPERTIES DEPENDS test-compile)
     endforeach()
 endfunction()
 
