Fix include directory

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -21,6 +21,7 @@ target_compile_features(lanxc-core INTERFACE
 
 target_include_directories(lanxc-core INTERFACE
 	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:include>
 	)
 install(DIRECTORY include/lanxc DESTINATION include/lanxc)
 
