--- a/.gitignore
+++ b/.gitignore
@@ -32,5 +32,11 @@ stamp-h1
 docs/
 build/
 *.doxytag
-.idea/
+.idea/workspace.xml
+.idea/tasks.xml
+.idea/misc.xml
+.idea/modules.xml
+*.iws
+*.iml
+
 
