--- a/.travis.yml
+++ b/.travis.yml
@@ -6,16 +6,24 @@ matrix:
         apt:
           sources:
             - ubuntu-toolchain-r-test
+            - george-edison55-precise-backports
           packages:
             - g++-4.9
+            - cmake
+            - cmake-data
+            - doxygen
       env: COMPILER=g++-4.9
     - compiler: gcc
       addons:
         apt:
           sources:
             - ubuntu-toolchain-r-test
+            - george-edison55-precise-backports
           packages:
             - g++-5
+            - cmake
+            - cmake-data
+            - doxygen
       env: COMPILER=g++-5
     - compiler: clang
       addons:
@@ -23,8 +31,12 @@ matrix:
           sources:
             - ubuntu-toolchain-r-test
             - llvm-toolchain-precise-3.6
+            - george-edison55-precise-backports
           packages:
             - clang-3.6
+            - cmake
+            - cmake-data
+            - doxygen
       env: COMPILER=clang++-3.6
     - compiler: clang
       addons:
@@ -32,16 +44,13 @@ matrix:
           sources:
             - ubuntu-toolchain-r-test
             - llvm-toolchain-precise-3.7
+            - george-edison55-precise-backports
           packages:
             - clang-3.7
+            - cmake
+            - cmake-data
+            - doxygen
       env: COMPILER=clang++-3.7
-addons:
-  apt:
-    sources:
-      - george-edison55-precise-backports # cmake 3.2.3 / doxygen 1.8.3
-    packages:
-      - cmake
-      - cmake-data
 
 before_script: mkdir build && cd build && CXX=g++-4.9 cmake ..
 script: make && make test
