--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,10 @@ matrix:
             - cmake
             - cmake-data
             - doxygen
-      env: COMPILER=g++-4.9
+      env:
+        - TRAVIS_CC=gcc
+        - TRAVIS_CXX=g++
+        - TRAVIS_TOOLCHAIN_VER=-4.9
     - compiler: gcc
       addons:
         apt:
@@ -24,7 +27,10 @@ matrix:
             - cmake
             - cmake-data
             - doxygen
-      env: COMPILER=g++-5
+      env:
+        - TRAVIS_CC=gcc
+        - TRAVIS_CXX=g++
+        - TRAVIS_TOOLCHAIN_VER=-5
     - compiler: clang
       addons:
         apt:
@@ -37,7 +43,10 @@ matrix:
             - cmake
             - cmake-data
             - doxygen
-      env: COMPILER=clang++-3.6
+      env:
+        - TRAVIS_CC=clang
+        - TRAVIS_CXX=clang++
+        - TRAVIS_TOOLCHAIN_VER=-3.6
     - compiler: clang
       addons:
         apt:
@@ -50,9 +59,15 @@ matrix:
             - cmake
             - cmake-data
             - doxygen
-      env: COMPILER=clang++-3.7
+      env:
+        - TRAVIS_CC=clang
+        - TRAVIS_CXX=clang++
+        - TRAVIS_TOOLCHAIN_VER=-3.7
 
-before_script: mkdir build && cd build && cmake ..
+before_script:
+  - export CC=$(TRAVIS_CC)-$(TRAVIS_TOOLCHAIN_VERSION)
+  - export CXX=$(TRAVIS_CXX)-$(TRAVIS_TOOLCHAIN_VERSION)
+  - mkdir build && cd build && cmake ..
 script: make && make test
 
 
