--- a/.travis.yml
+++ b/.travis.yml
@@ -68,6 +68,6 @@ before_script:
   - export CC=${TRAVIS_CC}${TRAVIS_TOOLCHAIN_VERSION}
   - export CXX=${TRAVIS_CXX}${TRAVIS_TOOLCHAIN_VERSION}
   - mkdir build && cd build && cmake ..
-script: make && make test
+script: make VERBOSE=1 && make VERBOSE=1 test
 
 
