--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.2 FATAL_ERROR)
 
 add_subdirectory(lanxc-core)
-add_subdirectory(lanxc-core-unix)
+add_subdirectory(lanxc-core-posix)
 add_subdirectory(lanxc-core-macos)
 add_subdirectory(test)
