Remove old task.hpp

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -11,5 +11,5 @@ function(lanxc_unit_test )
 endfunction()
 
 lanxc_unit_test(list-01 rbtree-01 rbtree-02 rbtree-03 rbtree-04 function-01
-                scheduler-01 future-01)
+                future-01)
 
