--- a/lanxc-core/include/lanxc/config.hpp.in
+++ b/lanxc-core/include/lanxc/config.hpp.in
@@ -5,7 +5,7 @@
 #define LANXC_CORE_SHARED @LANXC_CORE_SHARED@
 
 #if LANXC_CORE_SHARED
-  #if BUILD_SHARED_LANXC_CORE
+  #if defined(BUILD_SHARED_LANXC_CORE)
     #ifdef _WIN32
       #define LANXC_CORE_EXPORT __declspec(dllexport)
       #define LANXC_CORE_HIDDEN
@@ -19,12 +19,13 @@
   #else
     #ifdef _WIN32
       #define LANXC_CORE_EXPORT __declspec(dllimport)
+      #define LANXC_CORE_HIDDEN
     #elif defined(unix) || defined(__unix__) || defined(__APPLE__)
       #define LANXC_CORE_EXPORT
     #else
       #define LANXC_CORE_EXPORT
+      #define LANXC_CORE_HIDDEN
     #endif
-    #define LANXC_CORE_HIDDEN
   #endif
 #else
   #define LANXC_CORE_EXPORT
